@@ -38,7 +38,13 @@ class NotaryHTTPServer:
 	Collect and share information on website certificates from around the internet.
 	"""
 
+	# Attempt to version meaningfully, following semver.org:
+	# Given a version number MAJOR.MINOR.PATCH, increment the:
+	# MAJOR version when you make large architectural changes,
+	# MINOR version when you add functionality in a backwards-compatible manner
+	# PATCH version when you make backwards-compatible bug fixes.
 	VERSION = "3.3.1a"
+
 	DEFAULT_WEB_PORT=8080
 	ENV_PORT_KEY_NAME='PORT'
 	STATIC_DIR = "notary_static"
